# app

./: .gitignore  .vercelignore  CLAUDE.md  DESKTOP-APP-PLAN.md  MEETING-BRIEFING-HANDOFF.md  TASK-MANAGEMENT-PLAN.md  desktop-app-plan-phase-2.md  desktop-app-plan-phase-3.md  desktop-app-plan-phase-4.md  desktop-app-plan-phase-5.md  desktop-app-plan-phase-6.md  desktop-app-plan-phase-one.md  next.config.ts  package-lock.json  package.json  se-ranking-project-ids.md  vercel.json
app/: globals.css  layout.tsx  page.tsx
components/: ActivityTracker.tsx  AdminClientList.tsx  AdminLeadsList.tsx  AdminNav.tsx  AdminSidebar.tsx  AnalyticsBlurOverlay.tsx  AnalyticsCallout.tsx  AppSettings.tsx  ApprovalSection.tsx  AssignPackageModal.tsx  AssigneeDropdown.tsx  AttachmentList.tsx  CRMSubNav.tsx  CalendarSettings.tsx  CancelPackageModal.tsx  ClientBillingHealth.tsx  ClientBillingTab.tsx  ClientDashboardTracker.tsx  ClientDetailView.tsx  ClientDetailsForm.tsx  ClientDropdown.tsx  ClientFormModal.tsx  ClientHoursSummary.tsx  ClientNotesTimeline.tsx  ClientOnboardingForm.tsx  ClientPackagesPanel.tsx  ClientPaymentHistory.tsx  ClientProfileHeader.tsx  ClientProfileTabs.tsx  ClientStatusBadge.tsx  ClientTicketsList.tsx  CommandPalette.tsx  ConvertLeadModal.tsx  (+102 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  timer-pip.json
src-tauri/icons/: icon.icns  icon.png.backup
src-tauri/src/: autostart.rs  bridge.rs  clipboard.rs  deep_link.rs  dock.rs  lib.rs  main.rs  menu.rs  notifications.rs  pip.rs  shortcuts.rs  tray.rs  updater.rs
(+528 files in other folders)
