[package]
name = "insightpulse"
version = "1.2.4"
edition = "2021"

[lib]
name = "insightpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Plugins
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"

# macOS native APIs (dock badge)
objc = "0.2"
cocoa = "0.26"

# Plugins — Phase 4
tauri-plugin-updater = "2"

# Plugins — Phase 6
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"

# Utilities
open = "5"
url = "2"
